# Pico-GC9A01

./: CMakeLists.txt  GC9A01_test.uf2  gc9a01_test.c
GC9A01/: gc9a01.c  gc9a01.h
